[package]
name = "musical-keyboard"
version = "0.1.0"
authors = ["Charles Johnson <charlesthomasjohnson0@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cpal = "0.13.3"
once_cell = "1.7.2"
termion = "1.5.6"
